--- a/farmlink_website/how-it-works.html
+++ b/farmlink_website/how-it-works.html
@@ -21,7 +21,7 @@
                 <a href="about.html" class="nav-link" data-translate="nav_about">À propos</a>
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
                 <a href="solutions.html" class="nav-link" data-translate="nav_solutions">Nos Solutions</a>
-                <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">✨ Conseiller IA</a>
+                <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">Conseiller IA</a>
                 <a href="contact.html" class="cta-button" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
             <div class="flex items-center">
