--- a/farmlink_website/solutions.html
+++ b/farmlink_website/solutions.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmLink - Nos Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="sticky top-0 z-50">
+    <header class="sticky top-0 z-50 shadow-md">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="index.html">
-                    <img src="image/logo.png" alt="Logo FarmLink" class="h-12 w-auto">
+                    <img src="image/logo.png" alt="Logo FarmLink" class="h-14 w-auto">
                 </a>
             </div>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="about.html" class="nav-link" data-translate="nav_about">À propos</a>
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
-                <a href="solutions.html" class="nav-link" data-translate="nav_solutions">Nos Solutions</a>
+                <a href="solutions.html" class="nav-link active" data-translate="nav_solutions">Nos Solutions</a>
                 <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">✨ Conseiller IA</a>
                 <a href="contact.html" class="cta-button" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
