--- a/farmlink_website/contact.html
+++ b/farmlink_website/contact.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmLink - Contact</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="dark">
 
     <header class="sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="index.html">
-                    <img src="image/logo.png" alt="Logo FarmLink" class="h-12 w-auto">
+                    <img src="image/logo.png" alt="Logo FarmLink" class="h-14 w-auto">
                 </a>
             </div>
             <div class="hidden md:flex items-center space-x-8">
@@ -22,10 +23,10 @@
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
                 <a href="solutions.html" class="nav-link" data-translate="nav_solutions">Nos Solutions</a>
                 <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">Conseiller IA</a>
-                <a href="contact.html" class="cta-button" data-translate="nav_get_quote">Obtenir un devis</a>
+                <a href="contact.html" class="nav-link active" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
             <div class="flex items-center">
-                <select id="language-switcher" class="mr-4 p-2 rounded-md">
+                 <select id="language-switcher" class="mr-4">
                     <option value="fr">FR</option>
                     <option value="en">EN</option>
                     <option value="ar">AR</option>
@@ -41,40 +42,52 @@
                 </div>
             </div>
         </nav>
-        <div id="mobile-menu" class="hidden md:hidden">
+        <div id="mobile-menu" class="hidden md:hidden p-4 mt-2 mx-4">
             <a href="about.html" class="block py-2 px-4 text-sm" data-translate="nav_about_mobile">À propos</a>
             <a href="how-it-works.html" class="block py-2 px-4 text-sm" data-translate="nav_how_it_works_mobile">Comment ça marche</a>
             <a href="solutions.html" class="block py-2 px-4 text-sm" data-translate="nav_solutions_mobile">Nos Solutions</a>
-            <a href="ai-advisor.html" class="block py-2 px-4 text-sm" data-translate="nav_ai_advisor_mobile">Conseiller IA</a>
+            <a href="ai-advisor.html" class="block py-2 px-4 text-sm" data-translate="nav_ai_advisor_mobile">✨ Conseiller IA</a>
             <a href="contact.html" class="block py-2 px-4 text-sm" data-translate="nav_get_quote_mobile">Obtenir un devis</a>
         </div>
     </header>
 
     <main>
         <section id="contact" class="py-20">
-            <div class="container mx-auto px-6">
+            <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title" data-translate="contact_title">Contactez-nous</h2>
-                <div class="max-w-lg mx-auto">
-                    <form>
-                        <div class="mb-4">
-                            <label for="name" class="block font-bold mb-2" data-translate="contact_name">Nom</label>
-                            <input type="text" id="name" class="form-input">
+
+                <div class="max-w-2xl mx-auto control-card mt-12 text-left">
+                    <p class="text-center text-text-300 mb-8" data-translate="contact_intro">
+                        Une question ? Un projet ? N'hésitez pas à nous contacter. Notre équipe est prête à vous aider à franchir le pas vers l'agriculture intelligente.
+                    </p>
+                    <form id="contact-form">
+                        <div class="mb-6">
+                            <label for="name" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_name">Nom</label>
+                            <input type="text" id="name" class="form-input" placeholder="Votre nom complet" required>
                         </div>
-                        <div class="mb-4">
-                            <label for="email" class="block font-bold mb-2" data-translate="contact_email">Email</label>
-                            <input type="email" id="email" class="form-input">
+                        <div class="mb-6">
+                            <label for="email" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_email">Email</label>
+                            <input type="email" id="email" class="form-input" placeholder="votre.email@exemple.com" required>
                         </div>
-                        <button type="submit" class="w-full cta-button" data-translate="contact_send">Envoyer</button>
+                        <div class="mb-6">
+                            <label for="phone" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_phone">Numéro de téléphone</label>
+                            <input type="tel" id="phone" class="form-input" placeholder="Votre numéro de téléphone (Optionnel)">
+                        </div>
+                        <div class="mb-6">
+                            <label for="message" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_message">Message</label>
+                            <textarea id="message" rows="4" class="form-input" placeholder="Décrivez votre projet ou votre question ici..." required></textarea>
+                        </div>
+                        <button type="submit" class="button w-full" data-translate="contact_send">
+                            <i class="fas fa-paper-plane mr-2"></i> Envoyer le Message
+                        </button>
                     </form>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer>
-        <div class="container mx-auto px-6 text-center py-8">
-            <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
-        </div>
+    <footer class="text-center py-8 border-t border-border-soft">
+        <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
