--- a/farmlink_website/solutions.html
+++ b/farmlink_website/solutions.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FarmLink - Nos Solutions</title>
+    <title>FarmLink - Contact</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +22,7 @@
                 <a href="about.html" class="nav-link" data-translate="nav_about">À propos</a>
                 <a href="how-it-works.html" class="nav-link" data-translate="nav_how_it_works">Comment ça marche</a>
                 <a href="solutions.html" class="nav-link active" data-translate="nav_solutions">Nos Solutions</a>
-                <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">✨ Conseiller IA</a>
+                <a href="ai-advisor.html" class="nav-link" data-translate="nav_ai_advisor">Conseiller IA</a>
                 <a href="contact.html" class="cta-button" data-translate="nav_get_quote">Obtenir un devis</a>
             </div>
             <div class="flex items-center">
@@ -55,29 +56,32 @@
             <div class="container mx-auto px-6">
                 <h2 class="section-title" data-translate="solutions_title">Nos Solutions Modulaires</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="solution-card">
+                    <div class="solution-card" data-aos="fade-up" data-aos-delay="100">
                         <h3 class="text-2xl font-bold mb-4" data-translate="solution_irrigation_title">Irrigation Intelligente</h3>
                         <p data-translate="solution_irrigation_desc">Optimisez votre consommation d'eau avec des vannes intelligentes et une planification automatisée.</p>
                     </div>
-                    <div class="solution-card">
+                    <div class="solution-card" data-aos="fade-up" data-aos-delay="200">
                         <h3 class="text-2xl font-bold mb-4" data-translate="solution_pump_title">Contrôle des Pompes</h3>
                         <p data-translate="solution_pump_desc">Gérez vos pompes à distance et surveillez le débit et la pression en temps réel.</p>
                     </div>
-                    <div class="solution-card">
+                    <div class="solution-card" data-aos="fade-up" data-aos-delay="300">
                         <h3 class="text-2xl font-bold mb-4" data-translate="solution_env_title">Surveillance Environnementale</h3>
                         <p data-translate="solution_env_desc">Prenez des décisions éclairées grâce aux données des capteurs de température, d'humidité et de sol.</p>
                     </div>
                 </div>
+                
             </div>
         </section>
-    </main>
 
+    </main>
+    
     <footer>
         <div class="container mx-auto px-6 text-center py-8">
             <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
