Add PHP authentication API and integrate frontend

--- a/account.html
+++ b/account.html
@@ -69,6 +69,7 @@
                             </div>
                             <button type="submit" class="button w-full" data-translate="auth_login_btn">Se connecter</button>
                         </form>
+                        <p id="login-message" class="mt-2 text-red-500"></p>
                         <p class="mt-4 text-text-300" data-translate="auth_register_prompt">Pas encore de compte ? <a href="#" id="show-register" class="text-brand-green-400 font-bold">Créer un compte</a></p>
                     </div>
 
@@ -83,6 +84,7 @@
                             </div>
                             <button type="submit" class="button w-full" data-translate="auth_register_btn">Créer le compte</button>
                         </form>
+                        <p id="register-message" class="mt-2 text-red-500"></p>
                         <p class="mt-4 text-text-300" data-translate="auth_login_prompt">Déjà un compte ? <a href="#" id="show-login" class="text-brand-blue-500 font-bold">Se connecter</a></p>
                     </div>
 
