--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                     <p class="text-center text-text-300 mb-8" data-translate="contact_intro">
                         Une question ? Un projet ? N'hésitez pas à nous contacter. Notre équipe est prête à vous aider à franchir le pas vers l'agriculture intelligente.
                     </p>
-                    <form id="contact-form">
+                    <form id="contact-form" action="/server/contact.php" method="POST">
                         <div class="mb-6">
                             <label for="name" class="block mb-2 text-sm font-medium text-text-300" data-translate="contact_name">Nom</label>
                             <input type="text" id="name" class="form-input" placeholder="Votre nom complet" required>
