--- a/register.html
+++ b/register.html
@@ -63,6 +63,21 @@
                         <h3 class="text-2xl font-bold mb-6 text-brand-green-400" data-translate="auth_register_title">Créer un compte</h3>
                         <form id="register-form">
                             <div class="mb-4">
+                                <input type="text" id="register-last-name" class="form-input" placeholder="Nom" data-translate-placeholder="auth_last_name_placeholder" required>
+                            </div>
+                            <div class="mb-4">
+                                <input type="text" id="register-first-name" class="form-input" placeholder="Prénom" data-translate-placeholder="auth_first_name_placeholder" required>
+                            </div>
+                            <div class="mb-4">
+                                <input type="email" id="register-email" class="form-input" placeholder="Email" data-translate-placeholder="auth_email_placeholder" required>
+                            </div>
+                            <div class="mb-4">
+                                <input type="tel" id="register-phone" class="form-input" placeholder="Téléphone" data-translate-placeholder="auth_phone_placeholder" required>
+                            </div>
+                            <div class="mb-4">
+                                <input type="text" id="register-region" class="form-input" placeholder="Région" data-translate-placeholder="auth_region_placeholder" required>
+                            </div>
+                            <div class="mb-4">
                                 <input type="text" id="register-username" class="form-input" placeholder="Nom d'utilisateur" required>
                             </div>
                             <div class="mb-4">
