--- a/ai-advisor.html
+++ b/ai-advisor.html
@@ -84,7 +84,12 @@
                         </button>
                         
                         <textarea id="text-input" class="form-input flex-grow" rows="1" placeholder="Posez votre question ici..."></textarea>
-                        
+
+                        <select id="provider-select" class="form-input ml-2">
+                            <option value="chatgpt">ChatGPT</option>
+                            <option value="gemini">Gemini</option>
+                        </select>
+
                         <button type="submit" class="button">
                             <i class="fas fa-paper-plane"></i>
                         </button>
