--- a/ai-advisor.html
+++ b/ai-advisor.html
@@ -86,8 +86,8 @@
                         <textarea id="text-input" class="form-input flex-grow" rows="1" placeholder="Posez votre question ici..."></textarea>
 
                         <select id="provider-select" class="form-input ml-2">
-                            <option value="chatgpt">ChatGPT</option>
-                            <option value="gemini">Gemini</option>
+                            <option value="openai">Modèle 1</option>
+                            <option value="anthropic">Modèle 2</option>
                         </select>
 
                         <button type="submit" class="button">
