--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FarmLink - Accueil</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="aos.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
@@ -148,7 +148,7 @@
         <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="aos.js"></script>
     <script src="script.js"></script>
     <script>
         AOS.init({
