--- a/solutions.html
+++ b/solutions.html
@@ -6,7 +6,7 @@
     <title>FarmLink - Nos Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="aos.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -83,7 +83,7 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
