--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
     <title>FarmLink - À propos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="aos.css">
+    <style>
+      [data-aos]{opacity:1 !important;transform:none !important;}
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
@@ -73,6 +77,7 @@
         <p data-translate="footer_copyright">&copy; 2025 FarmLink. Tous droits réservés.</p>
     </footer>
 
+    <script src="aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
