--- a/ai-advisor.html
+++ b/ai-advisor.html
@@ -7,6 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="aos.css">
+    <style>
+      [data-aos]{opacity:1 !important;transform:none !important;}
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
@@ -108,6 +112,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/qna@1.7.1/dist/qna.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@2.1.1/dist/mobilenet.min.js"></script>
     
+    <script src="aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
