Use dark theme as default on solutions page

--- a/solutions.html
+++ b/solutions.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="aos.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="dark">
 
     <header class="sticky top-0 z-50 shadow-md">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
